syntax = "proto3";
import "google/protobuf/empty.proto";
package com.aston.grpc;
option java_multiple_files = true;

service EventService {
  rpc createdEvent (CreatedEventRequest) returns (CreatedEventResponse);
}

message CreatedEventRequest {
  string message = 1;
}

message CreatedEventResponse {
  int32 upPrice = 1;
  string company = 2;
}
